# satin

./: Cargo.toml  README.md
satin-demo/: Cargo.toml
satin-demo/src/: join_microbench.rs  map_collect.rs  sort.rs  str_split.rs  tree.rs  vec_collect.rs
satin-demo/src/factorial/: mod.rs
satin-demo/src/fibonacci/: mod.rs
satin-demo/src/find/: mod.rs
satin-demo/src/life/: mod.rs
satin-demo/src/matmul/: mod.rs
satin-demo/src/mergesort/: mod.rs
satin-demo/src/nbody/: nbody.rs
satin-demo/src/noop/: mod.rs
satin-demo/src/pythagoras/: mod.rs
satin-demo/src/quicksort/: bench.rs  mod.rs
satin-demo/src/sieve/: mod.rs
satin-demo/src/tsp/: solver.rs  step.rs
src/: lib.rs  prelude.rs  range.rs  range_inclusive.rs  str.rs
src/compile_fail/: cannot_collect_filtermap_data.rs  cannot_zip_filtered_data.rs  cell_par_iter.rs  must_use.rs  no_send_par_iter.rs  rc_par_iter.rs
src/iter/: blocks.rs  chain.rs  empty.rs  from_par_iter.rs  mod.rs  multizip.rs  once.rs  par_bridge.rs  repeat.rs  skip.rs  splitter.rs  test.rs  walk_tree.rs
src/iter/collect/: test.rs
src/iter/plumbing/: mod.rs
src/slice/: mod.rs  sort.rs
tests/: chars.rs  clones.rs  collect.rs  cross-pool.rs  debug.rs  drain_vec.rs  intersperse.rs  issue671-unzip.rs  issue671.rs  iter_panic.rs  named-threads.rs  octillion.rs  par_bridge_recursion.rs  producer_split_at.rs  sort-panic-safe.rs  str.rs
