[package]
name = "satin"
version = "1.0.0-alpha.1"
description = "Low-overhead parallel iterators"
exclude = ["/ci/*", "/.github/*"]

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# These are both public dependencies!
forte.workspace = true
either.workspace = true

[dev-dependencies]
rand.workspace = true

[workspace]
members = ["satin-demo"]
exclude = ["ci"]

[workspace.package]
readme = "README.md"
rust-version = "1.85"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

[workspace.lints.rust]
private-bounds = "deny"
private-interfaces = "deny"
unnameable-types = "deny"
unreachable-pub = "deny"
unsafe-op-in-unsafe-fn = "deny"

rust_2018_idioms = { level = "warn", priority = -1 }

# Some dependencies may not be their latest version, in order to support older rustc.
[workspace.dependencies]
crossbeam-deque = "0.8.1"
crossbeam-utils = "0.8.0"
either = { version = "1", default-features = false }
libc = "0.2"
rand = "0.10"
scoped-tls = "1.0"
forte = "1.0.0-alpha.5"
